# crypto-agent

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json  vitest.config.ts
crypto_agent/: __main__.py  agent.py  backtest.py  cli.py  config.py  context.py  daemon.py  heartbeat.py  indicators.py  memory.py  models.py  notify.py  skill_loader.py  soul.py  sub_agents.py
crypto_agent/exchange/: base.py  live.py  manager.py  paper.py
crypto_agent/llm/: __init__.py  provider.py
crypto_agent/tools/: __init__.py  analyze.py  assess_risk.py  backtest.py  buy.py  cancel_order.py  chain_data.py  compact.py  delegate.py  exchange_manage.py  execute_trade.py  get_chain_stats.py  get_klines.py  get_news.py  get_portfolio.py  get_price.py  load_skill.py  (+11 more)
src/: agent.ts  backtest.ts  cli.ts  config.ts  context.ts  daemon.ts  heartbeat.ts  indicators.ts  market-feed.ts  memory.ts  models.ts  notify.ts  session.ts  skill-loader.ts  soul.ts  sub-agents.ts
test/: backtest.test.ts  chain-data.test.ts  config.test.ts  context.test.ts  exchange-manager.test.ts  heartbeat.test.ts  indicators.test.ts  memory.test.ts  models.test.ts  news.test.ts  session.test.ts  skills.test.ts  soul.test.ts  sub-agents.test.ts  tools.test.ts
tests/: test_backtest.py  test_chain_data.py  test_context.py  test_exchange_manager.py  test_heartbeat.py  test_llm_provider.py  test_memory.py  test_model_context.py  test_models.py  test_news_feed.py  test_paper_exchange.py  test_skills.py  test_soul.py  test_strategy.py  test_sub_agents.py  test_tools.py
(+44 files in other folders)
