[project]
name = "crypto-agent"
version = "0.1.0"
description = "LLM + quantitative crypto trading agent with paper trading support"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.85.0",
    "ccxt>=4.5.44",
    "openai>=2.29.0",
    "pandas>=3.0.1",
    "python-dotenv>=1.2.2",
    "rich>=14.3.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.uv]
package = true

[project.scripts]
crypto-agent = "crypto_agent.cli:run"
